# NPP-Continuum-Simulation-2023

./: .gitignore  Plotting.ipynb  README.md  environment.yml
Experimental Data/gilad manual/: Gilad_Diode_Data.csv  S5.csv
Scripts/: pyproject.toml
Scripts/plotting/: plots.py
nppsolver/: nppsolver.py  pyproject.toml
simulation_cases/: pyproject.toml
simulation_cases/diode_baselines/: Baths.py
simulation_cases/diode_bases/: anion_reaction.py  base.py  baths_concentration.py  microporous.py
simulation_cases/diode_variations/: AgCl - Bath Width.py  AgCl - Rate Constant.py  AgCl - Voltage.py  Baths - Bath Concentration.py  Baths - Bath Width.py  Baths - Ionomer Concentration.py  Baths - Ionomer Width.py  Baths - Voltage.py  Microporous - Ionomer Width.py
simulation_cases/literature_comparison/: Gilad2.py
