[tool.black]
line-length = 120
skip-string-normalization = 1

[project]
name = "nppsolver"
authors = [
    {name = "Max Tepermeister", email = "mt845@cornell.edu"},
]
description = "1D NPP Continuum Solver"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]


