[tool.black]
line-length = 120
skip-string-normalization = 1

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diode_bases"
authors = [
    {name = "Max Tepermeister", email = "mt845@cornell.edu"},
]
description = "Helper scripts"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["diode_bases"]
